fix item to be left align, clear input box after writing

--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -7,5 +7,5 @@ input{
 }
 
 .list-group-item{
-  text-align: center;
+  text-align: left;
 }
